# fasthtml-scaffold

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: fasthtml-monsterui.mdc  no-custom-css.mdc  no-javascript.mdc
src/: main.py
src/components/: __init__.py  cards.py  home.py  layout.py  personal.py  resume.py  sidebar.py
src/data/: home.json  personal.json  resume.json
src/routes/: __init__.py  about.py  home.py  profile.py
src/services/: __init__.py  example.py  home.py  personal.py  resume.py
